<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Todo List App</string>
    <string name="add_task">Add Task</string>
    <string name="welcome_to_todo">Welcome to Todo List</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="tasks">Tasks</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="statistics">Statistics</string>
    <string name="add_edit_task">Add/Edit Task</string>
    <string name="add_edit_category">Add/Edit Category</string>
    <string name="continue_text">Continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="create_new_password">Create New Password</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
</resources>