<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasksFragment">

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.example.todofinallistapp.presentation.ui.fragments.TasksFragment"
        android:label="Tasks">
        <action
            android:id="@+id/action_tasksFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
    </fragment>

    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.example.todofinallistapp.presentation.ui.fragments.AddTaskFragment"
        android:label="Add Task">
        <action
            android:id="@+id/action_addTaskFragment_to_tasksFragment"
            app:destination="@id/tasksFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.todofinallistapp.presentation.ui.fragments.CategoriesFragment"
        android:label="@string/categories">
        <action
            android:id="@+id/action_categoriesFragment_to_addEditCategoryFragment"
            app:destination="@id/addEditCategoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.todofinallistapp.presentation.ui.fragments.StatisticsFragment"
        android:label="@string/statistics" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.todofinallistapp.presentation.ui.fragments.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.example.todofinallistapp.presentation.ui.fragments.AddEditTaskFragment"
        android:label="@string/add_edit_task" />

    <fragment
        android:id="@+id/addEditCategoryFragment"
        android:name="com.example.todofinallistapp.presentation.ui.fragments.AddEditCategoryFragment"
        android:label="@string/add_edit_category" />

</navigation> 